--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <div id="root"></div>
 
-<script src="http://localhost:8080/brant/main.bundle.js"></script>
+<script src="http://localhost:8080/main.bundle.js"></script>
 </body>
 </html>
